// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render the titlebar correctly 1`] = `
<table
  className="issue-table"
>
  <tbody>
    <tr>
      <td>
        <IssueMessage
          message="Reduce the number of conditional operators (4) used in the expression"
          organization="myorg"
          rule="javascript:S1067"
        />
      </td>
      <td
        className="issue-table-meta-cell issue-table-meta-cell-first"
      >
        <ul
          className="list-inline issue-meta-list"
        >
          <li
            className="issue-meta"
          >
            <IssueChangelog
              creationDate="2017-03-01T09:36:01+0100"
              isOpen={false}
              issue={
                Object {
                  "creationDate": "2017-03-01T09:36:01+0100",
                  "flows": Array [],
                  "key": "AVsae-CQS-9G3txfbFN2",
                  "line": 26,
                  "message": "Reduce the number of conditional operators (4) used in the expression",
                  "organization": "myorg",
                  "rule": "javascript:S1067",
                  "secondaryLocations": Array [],
                }
              }
              onFail={[Function]}
              togglePopup={[Function]}
            />
          </li>
          <li
            className="issue-meta"
          >
            <span
              className="issue-meta-label"
              title="line_number"
            >
              L
              26
            </span>
          </li>
          <li
            className="issue-meta"
          >
            <Link
              className="js-issue-permalink icon-link"
              onClick={[Function]}
              onlyActiveOnIndex={false}
              style={Object {}}
              target="_blank"
              to={
                Object {
                  "pathname": "/issues",
                  "query": Object {
                    "issues": "AVsae-CQS-9G3txfbFN2",
                    "open": "AVsae-CQS-9G3txfbFN2",
                  },
                }
              }
            />
          </li>
        </ul>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`should render the titlebar with the filter 1`] = `
<table
  className="issue-table"
>
  <tbody>
    <tr>
      <td>
        <IssueMessage
          message="Reduce the number of conditional operators (4) used in the expression"
          organization="myorg"
          rule="javascript:S1067"
        />
      </td>
      <td
        className="issue-table-meta-cell issue-table-meta-cell-first"
      >
        <ul
          className="list-inline issue-meta-list"
        >
          <li
            className="issue-meta"
          >
            <IssueChangelog
              creationDate="2017-03-01T09:36:01+0100"
              isOpen={false}
              issue={
                Object {
                  "creationDate": "2017-03-01T09:36:01+0100",
                  "flows": Array [],
                  "key": "AVsae-CQS-9G3txfbFN2",
                  "line": 26,
                  "message": "Reduce the number of conditional operators (4) used in the expression",
                  "organization": "myorg",
                  "rule": "javascript:S1067",
                  "secondaryLocations": Array [],
                }
              }
              onFail={[Function]}
              togglePopup={[Function]}
            />
          </li>
          <li
            className="issue-meta"
          >
            <span
              className="issue-meta-label"
              title="line_number"
            >
              L
              26
            </span>
          </li>
          <li
            className="issue-meta"
          >
            <Link
              className="js-issue-permalink icon-link"
              onClick={[Function]}
              onlyActiveOnIndex={false}
              style={Object {}}
              target="_blank"
              to={
                Object {
                  "pathname": "/issues",
                  "query": Object {
                    "issues": "AVsae-CQS-9G3txfbFN2",
                    "open": "AVsae-CQS-9G3txfbFN2",
                  },
                }
              }
            />
          </li>
          <li
            className="issue-meta"
          >
            <SimilarIssuesFilter
              isOpen={false}
              issue={
                Object {
                  "creationDate": "2017-03-01T09:36:01+0100",
                  "flows": Array [],
                  "key": "AVsae-CQS-9G3txfbFN2",
                  "line": 26,
                  "message": "Reduce the number of conditional operators (4) used in the expression",
                  "organization": "myorg",
                  "rule": "javascript:S1067",
                  "secondaryLocations": Array [],
                }
              }
              onFail={[Function]}
              onFilter={[Function]}
              togglePopup={[Function]}
            />
          </li>
        </ul>
      </td>
    </tr>
  </tbody>
</table>
`;
